Fail attempt to solve collapsables.js

--- a/src/scss/layout/_mainCard.scss
+++ b/src/scss/layout/_mainCard.scss
@@ -94,6 +94,7 @@
   &__link {
     color: $colorPal1Dark;
     justify-self: center;
+    align-self: center;
   }
 }
 
